# Moonline

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
application/: CMakeLists.txt  application.cpp  application.h  scene_keys.h  scene_payloads.h  scene_registry.cpp  scene_registry.h
application/input/: gameplay_input_router.cpp  gameplay_input_router.h  input_context.h  ui_input_router.cpp  ui_input_router.h
application/scene/: application_scene.cpp  application_scene.h  scene_keys.h  scene_registry.cpp  scene_registry.h
assets/: assets_structure.json
assets/i18n/: i18n_manifest.json
assets/preload/: preload_manifest.json
core/: CMakeLists.txt  timer.cpp
docs/: assets_tree.txt  assets_tree_zh.txt  overview.md  overview.txt  overview_tree.txt  thought.txt  ui_system_guide.md
docx/: assets_tree_en.txt  assets_tree_pure.txt  coding_standard.md  tmp.txt
engine/: CMakeLists.txt
engine/animation/: animation.cpp  animation.h  animation_manager.cpp  animation_manager.h  effect.cpp  effect.h  effect_manager.cpp  effect_manager.h
engine/base/: depth_layer.h  singleton.h
engine/core/: depth_layer.h  game_object.h  render_command.h  scene_object.h  time.cpp  time.h
engine/input/: input_architecture.md  input_device_tracker.cpp  input_device_tracker.h  input_snapshot.h  input_state.h  input_system.cpp  input_system.h  input_translator.cpp  input_translator.h  input_types.h  raw_input_frame.h  raw_input_state.h  raw_input_types.h  ui_gamepad_scroll_synthesizer.cpp  ui_gamepad_scroll_synthesizer.h
engine/io/: character_config_loader.cpp  character_manifest_loader.cpp  file_manager.h  json_loader.h  path_manager.h  resource_request_builder.h
engine/resources/: atlas_manager.cpp  resource_bootstrapper.cpp  resource_bootstrapper.h  resource_manager.cpp  resource_manager.h  resource_types.h  surface_loader.cpp  surface_loader.h  texture_manager.h
engine/scene/: scene.cpp  scene.h  scene_factory.cpp  scene_factory.h  scene_input_order.h  scene_key.h  scene_manager.cpp  scene_manager.h  scene_manager_observer.h  scene_payload.h  scene_request.h  scene_request_observer.h  tmp.h
engine/tools/: rect.h
engine/ui/: bar.cpp  bar.h  button.cpp  button.h  fade_image.h  progress_bar.cpp  progress_bar.h  ui_bar.cpp  ui_bar.h  ui_button.cpp  ui_button.h  ui_control.h  ui_element.cpp  ui_element.h  ui_fade_image.cpp  ui_fade_image.h  ui_focusable.h  ui_layout.cpp  ui_layout.h  ui_mouse_utils.h  ui_progress_bar.cpp  ui_progress_bar.h  ui_settings.h
framework/: CMakeLists.txt  game_object.h
framework/animation/: animation.cpp  animation.h  animation_manager.h
framework/base/: depth_layer.h  observer.h  timer.cpp  timer.h  vector2.h
framework/core/: error.h
framework/input/: input_state.h  input_system.cpp
framework/io/: animation_config_loader.cpp  animation_config_loader.h  asset_config_types.h  assets_structure_loader.cpp  character_animation_layout_loader.cpp  character_config_loader.h  character_manifest_loader.h  file_manager.cpp  file_manager.h  json_loader.cpp  json_loader.h  path_manager.cpp  path_manager.h  resource_request_builder.cpp
framework/resources/: atlas.cpp  atlas.h  atlas_builder.cpp  atlas_builder.h  atlas_manager.h  audio_manager.h  font_manager.cpp  font_manager.h  resource_bootstrapper.cpp  resource_bootstrapper.h  resource_manager.cpp  resource_manager.h  resource_sub_manager.h  texture_loader.cpp  texture_manager.cpp
framework/scene/: scene.h  scene_factory.cpp  scene_factory.h  scene_manager.cpp  scene_manager.h
framework/ui/: CMakeLists.txt  fade_image.cpp  fade_image.h  progress_bar.cpp  progress_bar.h
gameplay/: CMakeLists.txt  animation_type.h
gameplay/character/: character.h
gameplay/input/: gameplay_input_frame.h  gameplay_input_state.h  gameplay_input_types.h
gameplay/scene/: scene_type.h  (+11 more)
(+145 files in other folders)
